# ros-bridge

carla_actor_state_publisher/src/carla_actor_state_publisher/: carla_actor_state_publisher.py
carla_actor_state_types/msg/: CarlaActorState.msg
carla_actor_state_types/srv/: GetActorState.srv
carla_replay_control/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_replay_control/launch/: carla_replay_control.launch  carla_replay_control.launch.py
carla_replay_control/src/carla_replay_control/: carla_replay_control.py
carla_waypoint_publisher/launch/: carla_waypoint_publisher.launch  carla_waypoint_publisher.launch.py
carla_waypoint_publisher/src/carla_waypoint_publisher/: carla_waypoint_publisher.py
docker/: Dockerfile
